fix small screen overflow in project item

--- a/test_page_update_data/style.css
+++ b/test_page_update_data/style.css
@@ -317,6 +317,7 @@ body {
   }
   .proj-box {
     width: 80%;
+    margin: 0px;
   }
   .grid-task-item {
     grid-template-columns: repeat(2, 1fr);
